# jstor-submit

./: Makefile  README.md  jstor-submit.cabal  jstor_scrape.py
app/: Actions.hs  Opts.hs  Types.hs
specs/Jstor/: TypesSpec.hs
src/Jstor/: Types.hs
src/Jstor/Actions/: Default.hs  Search.hs
