name:                jstor-submit
version:             0.0.0.0
synopsis:            Automate exporting stuff from jstor.
-- description:         Automate exporting stuff from jstor.
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Jstor.Actions.Search
                     , Jstor.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , errors
                     , html-conduit
                     , lens
                     , text
                     , text-format
                     , wreq
                     , xml-conduit
                     , xml-lens
                     , xml-types
  hs-source-dirs:      src
  default-language:    Haskell2010

executable jstor-submit
  main-is:             Main.hs
  other-modules:       Actions
                     , Opts
                     , Types
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                     , jstor-submit
                     , errors
                     , text
                     , optparse-applicative
                     , errors
  hs-source-dirs:      app
  ghc-options:         -O2
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

test-suite jstor-submit-specs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      specs
  main-is:             Specs.hs
  other-modules:         Jstor.TypesSpec
  build-depends:         base
                       , jstor-submit
                       , errors
                       , lens
                       , text
                       , QuickCheck
                       , smallcheck
                       , hspec
  default-language:    Haskell2010

benchmark jstor-submit-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -O2
                       -threaded
                       -rtsopts
  hs-source-dirs:      bench
  main-is:             Bench.hs
  -- other-modules:         
  build-depends:         base
                       , jstor-submit
                       , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/jstor-submit
